Changed to PrimeFaces Mobile

--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -33,6 +33,11 @@
 		<param-value>home</param-value>
 	</context-param>
 
+	<context-param>
+		<param-name>primefaces.FONT_AWESOME</param-name>
+		<param-value>true</param-value>
+	</context-param>
+
 	<!-- Spring -->
 
 	<listener>
