--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
 			<version>1.0.10</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>font-awesome</artifactId>
+			<version>4.6.3</version>
+		</dependency>
+
 		<!-- SPRING + JSF -->
 		<dependency>
 			<groupId>org.glassfish.web</groupId>
