--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,18 @@
 			<version>5.1.39</version>
 		</dependency>
 
+		<!-- PRETTYFACES -->
+		<dependency>
+			<groupId>org.ocpsoft.rewrite</groupId>
+			<artifactId>rewrite-servlet</artifactId>
+			<version>3.4.1.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.ocpsoft.rewrite</groupId>
+			<artifactId>rewrite-config-prettyfaces</artifactId>
+			<version>3.4.1.Final</version>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
